--- a/Contact.css
+++ b/Contact.css
@@ -116,10 +116,6 @@ body {
     }
   }
 
-
-
-
-
 .ContactDes{
 
   left: 99px; 
@@ -127,7 +123,7 @@ body {
   position: absolute; 
   color: #ffffff; 
   font-size: 80px; 
-  font-family: Modern Sans; 
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   font-weight: 500; 
   word-wrap: break-word;
 }
@@ -140,7 +136,7 @@ body {
   text-align: justify; 
   color: #ffffff; 
   font-size: 20px; 
-  font-family: Modern Sans; 
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   font-weight: 500; 
   word-wrap: break-word;
 }
@@ -153,7 +149,7 @@ body {
     top: 480px;
     color: #ffffff; 
     font-size: 30px; 
-    font-family: Modern Sans; 
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     font-weight: 500; 
     word-wrap: break-word;
 }
@@ -165,6 +161,47 @@ body {
 .contact-info a:hover {
     text-decoration: underline;
     
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+  font-weight: 500; 
+  word-wrap: break-word;
+  font-size: 30px; 
+  background-color: #000000;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .Vector7{
@@ -179,10 +216,25 @@ body {
 /* -----------------Phone Size------------------------ */
 
   @media (max-width: 767px) {
+
+   
+    .dropdown-content {
+      position: absolute; 
+      z-index: 100;
+      min-width: 100%;
+    }
+  
+    .dropdown-content a {
+      padding: 15px;
+      text-align: center;
+    }
+    
+    
+    
     .CTA {
       width: 100%;
       font-size: 20px; /* Adjust font size for readability */
-      margin-top: 800px; /* Adjust for better spacing */
+      margin-top: 900px; /* Adjust for better spacing */
       padding: 20px;
       right: 0;
       text-align: center; /* Center text on smaller screens */
